# dc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rebuild.cpp  toolchain-arm.cmake
.github/workflows/: c-cpp.yml
docs/: index.html  script.js  style.css
include/: args.hpp  compiler.hpp  fs.hpp  lexer.hpp
src/: args.cpp  compiler.cpp  dcc.cpp  fs.cpp  lexer.cpp
tests/: if.dc
